--- a/templates/about.html
+++ b/templates/about.html
@@ -244,7 +244,7 @@ h1, h2, h3, h5 {
 <section class="cta py-5 text-center">
     <div class="container">
         <h2 class="fw-bold mb-3">Ready to showcase your store?</h2>
-        <a href="{% url 'home' %}" class="btn btn-primary btn-lg">Get Started Now</a>
+        <a href="{% url 'home' %}" class="btn btn-success btn-lg">Get Started Now</a>
     </div>
 </section>
 
