--- a/templates/faq.html
+++ b/templates/faq.html
@@ -3,6 +3,9 @@
 
 {% block body %}
 <div class="container py-5">
+  <a href="{% url 'profile' %}" class="text-decoration-none text-dark mb-3 d-inline-block">
+  <i class="bi bi-arrow-left"></i> Back
+</a>
   <h2 class="text-center mb-4">Frequently Asked Questions</h2>
 
   <div class="accordion" id="faqAccordion">
