--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -3,6 +3,9 @@
 
 {% block body %}
 <div class="container py-4">
+  <a href="{% url 'profile' %}" class="text-decoration-none text-dark mb-3 d-inline-block">
+  <i class="bi bi-arrow-left"></i> Back
+</a>
   <h2 class="text-center mb-3">Privacy Policy</h2>
   <p>At Waapfolio, your privacy is extremely important to us. This Privacy Policy outlines the types of information we collect and how we use, disclose, and protect it.</p>
 
