--- a/templates/account_information.html
+++ b/templates/account_information.html
@@ -7,7 +7,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6 col-sm-12">
             <div class="card shadow-sm p-4">
-                <h3 class="text-center mb-4 fw-bold text-primary">Account Information</h3>
+                <h3 class="text-center mb-4 fw-bold text-success">Account Information</h3>
                 
                 <!-- Username -->
                 <div class="mb-3">
@@ -23,7 +23,7 @@
 
                 <!-- Optional Back Button -->
                 <div class="text-center mt-4">
-                    <a href="{% url 'profile' %}" class="btn btn-outline-primary"> > Back</a>
+                    <a href="{% url 'profile' %}" class="btn btn-outline-success"> > Back</a>
                 </div>
             </div>
         </div>
