--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,9 +9,9 @@
     --text-light: #222;
     --bg-dark: #121212;
     --text-dark: #eee;
-    --primary: #1da1f2;
+    --primary: #1df23dff;
     --border: #ddd;
-    --section-hover-bg: #1da1f2;
+    --section-hover-bg: #62e24eff;
     --section-hover-text: #fff;
   }
 
@@ -120,7 +120,7 @@
     color: white;
   }
   .btn-login:hover {
-    background-color: #0d8ddb;
+    background-color: #0ddb17ff;
   }
 
   /* Toggle switch */
@@ -172,6 +172,13 @@
   input:checked + .slider::before {
     transform: translateX(26px);
   }
+  .container {
+  max-width: 480px;
+  margin: 3rem auto;
+  padding: 0 1rem;
+  padding-bottom: 6rem; /* 👈 extra space for bottom nav */
+}
+
 </style>
 
 <div class="container">
