--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -3,12 +3,11 @@
 {% load static %}
 
 {% block body %}
+
 <div class="container py-5">
-    {% if request.user.is_authenticated and request.user.store %}
-    <a href="{% url 'view_store' request.user.store.slug %}" class="text-decoration-none text-dark mb-3 d-inline-block">
-        <i class="bi bi-arrow-left"></i> Back
-    </a>
-    {% endif %}
+  <a href="{% url 'view_store' product.store.slug %}" class="text-decoration-none text-dark mb-3 d-inline-block">
+    <i class="bi bi-arrow-left"></i> Back to Store
+</a>
 
     <h3 class="text-center mb-4 fw-bold">{{ product.name }}</h3>
 
@@ -66,7 +65,7 @@
 
         <div class="col-lg-6">
             <div class="p-4 bg-light rounded shadow-sm border">
-                <h4 class="text-success fw-bold">₦{{ product.price|floatformat:0 }}</h4>
+                <h4 class="text-success fw-bold">{{ product.price|floatformat:0 }}</h4>
 
                 <div class="mt-3">
                     <h6 class="fw-bold text-secondary">Product Description</h6>
