--- a/templates/store/view_store.html
+++ b/templates/store/view_store.html
@@ -240,7 +240,7 @@ body {
     <i class="bi bi-pencil-square"></i> Edit Store
   </a>
 {% endif %}
-  <p>{{ store.custom_message }}</p>
+  <p>{{ store.Bio }}</p>
 
   <!-- Store link & share -->
   <div class="store-link-group mt-4 d-flex justify-content-center flex-wrap gap-2">
