--- a/templates/faq.html
+++ b/templates/faq.html
@@ -3,7 +3,11 @@
 
 {% block body %}
 <div class="container py-5">
+  {% if request.user.is_authenticated %}
   <a href="{% url 'profile' %}" class="text-decoration-none text-dark mb-3 d-inline-block">
+  {% else %} 
+  <a href="{% url 'home' %}" class="text-decoration-none text-dark mb-3 d-inline-block">
+  {% endif %}
   <i class="bi bi-arrow-left"></i> Back
 </a>
   <h2 class="text-center mb-4">Frequently Asked Questions</h2>
